--- a/stylesheet.css
+++ b/stylesheet.css
@@ -62,7 +62,8 @@ header {
 }
 .ul-input {
   background-color: gold;
-  margin-top: -21px;
+  margin-top: -25px;
+  height: 50PX;
 }
 .ul-input li:active,
 .ul-input li:hover {
